<resources>
    <string name="app_name">MotoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">HomeFragment</string>
    <string name="second_fragment_label">ProfileFragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="car_name">Nazwa samochodu</string>
    <string name="car_year">Rocznik samochodu</string>
    <string name="logout">Logout</string>
    <!-- ********************************
                SIGN UP STRINGS
        ******************************** -->

    <string name="sign_up_hint_email">E-mail</string>
    <string name="sign_up_hint_password">Hasło</string>
    <string name="sign_up_hint_password_v2">Powtórz hasło</string>
    <string name="sign_up_button">ZAREJESTRUJ</string>
    <string name="sign_up_header">ZAREJESTRUJ SIĘ</string>

    <!-- ********************************
                SIGN IN STRINGS
        ******************************** -->
    <string name="tv_sign_in">ZALOGUJ SIĘ</string>
    <string name="sign_in_email_hint">E-mail</string>
    <string name="sign_in_password_hint">Hasło</string>
    <string name="sign_in_button">ZALOGUJ</string>
    <string name="sign_in_register_button">ZAREJESTRUJ</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- ********************************
                MAIN PAGE STRINGS
        ******************************** -->
    <string name="main_page_tv_name">Imie</string>
    <string name="main_page_ed_name">Twoje imie</string>
    <string name="main_page_tv_surname">Nazwisko</string>
    <string name="main_page_ed_surname">Twoje nazwisko</string>
    <string name="main_page_tv_email">E-mail</string>
    <string name="main_page_ed_email">Twoj E-mail</string>


    <string name="foo">RecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerView
    RecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerView
    RecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerView
    RecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerView
    RecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerViewRecyclerView</string>

    <!-- ********************************
            LIST ROW STRINGS
    ******************************** -->

    <string name="row_name">Nazwa samochodu</string>
    <string name="row_year">Rocznik samochodu</string>

</resources>
